# ChangeLog for app-antivirus/clamav
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-antivirus/clamav/ChangeLog,v 1.92 2005/06/24 22:00:01 killerfox Exp $

  24 Jun 2005; Rene Nussbaumer <killerfox@gentoo.org> clamav-0.86.1.ebuild:
  Stable on hppa. bug #96960

  24 Jun 2005; Bryan Ãstergaard <kloeri@gentoo.org> clamav-0.86.1.ebuild:
  Stable on alpha, bug 96960.

  24 Jun 2005; Markus Rothe <corsair@gentoo.org> clamav-0.86.1.ebuild:
  Stable on ppc64 (bug #96960)

  24 Jun 2005; Herbie Hopkins <herbs@gentoo.org> clamav-0.86.1.ebuild:
  Stable on amd64 wrt bug #96960.

  24 Jun 2005; Michael Hanselmann <hansmi@gentoo.org> clamav-0.86.1.ebuild:
  Stable on ppc.

  24 Jun 2005; Gustavo Zacarias <gustavoz@gentoo.org> clamav-0.86.1.ebuild:
  Stable on sparc wrt #96960

  24 Jun 2005; Andrej Kacian <ticho@gentoo.org> clamav-0.86.1.ebuild:
  Stable on x86, due to security bug #96960.

*clamav-0.86.1 (23 Jun 2005)

  23 Jun 2005; Andrej Kacian <ticho@gentoo.org> +clamav-0.86.1.ebuild:
  Version bump.

*clamav-0.86 (21 Jun 2005)

  21 Jun 2005; Andrej Kacian <ticho@gentoo.org> -clamav-0.83.ebuild,
  -clamav-0.84.ebuild, clamav-0.85.1-r1.ebuild, -clamav-0.86_rc1.ebuild,
  +clamav-0.86.ebuild:
  Version bump. Backport solution for bug #96373 to 0.85.1-r1. Remove old
  ebuilds.

  18 Jun 2005; Andrej Kacian <ticho@gentoo.org> clamav-0.86_rc1.ebuild:
  Point clamav to correct sendmail binary if mailwrapper USE flag is enabled.
  Closes bug #96373, by Analyzer <subscribe2k at yandex.ru>. Also fix head
  syntax (fixheadtails.eclass) in configure.

  18 Jun 2005; Michael Hanselmann <hansmi@gentoo.org>
  clamav-0.85.1-r1.ebuild:
  Stable on ppc.

  15 Jun 2005; Fernando J. Pereda <ferdy@gentoo.org>
  clamav-0.85.1-r1.ebuild:
  Stable on alpha

  15 Jun 2005; Markus Rothe <corsair@gentoo.org> clamav-0.85.1-r1.ebuild:
  Stable on ppc64

  14 Jun 2005; Marcus D. Hanwell <marcus@gentoo.org>
  clamav-0.85.1-r1.ebuild: