@@ -1,0 +1,1 @@
+MD5 870de14ba123d6e9cba9850498c49f5d clamav-0.86.2.tar.gz 4094829
