@@ -1,6 +1,11 @@
 # ChangeLog for app-antivirus/clamav
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-antivirus/clamav/ChangeLog,v 1.92 2005/06/24 22:00:01 killerfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-antivirus/clamav/ChangeLog,v 1.93 2005/07/25 09:34:50 ticho Exp $
+
+*clamav-0.86.2 (25 Jul 2005)
+
+  25 Jul 2005; Andrej Kacian <ticho@gentoo.org> +clamav-0.86.2.ebuild:
+  Version bump.
 
   24 Jun 2005; Rene Nussbaumer <killerfox@gentoo.org> clamav-0.86.1.ebuild:
   Stable on hppa. bug #96960
